--- a/creditkarma.html
+++ b/creditkarma.html
@@ -27,14 +27,7 @@
 
         <h2 align="center">Experienced User Interviews</h2>
         <p>
-            Two experienced Credit Karma users were interviewed and asked to perform the main tasks of the desktop application in order to evaluate the Credit Karma interface. Participants A and B both stated that they Credit Karma to check full credit reports, dispute errors on credit reports, file tax returns, and look for new credit cards to apply for. The interviews were voice-recorded, video-recorded, and semi-structured. The interviewees were generally asked the following questions:
-            <ol class="content-list">
-                <li>What do you use Credit Karma for?</li>
-                <li>How often do you use this app?</li>
-                <li>What do you think of this app?</li>
-                <li>How would you do [this purpose you are using Credit Karma for]?</li>
-                <li>Would you add any features or improvements to this app?</li>
-            </ol>
+            Two experienced Credit Karma users were interviewed and asked to perform the main tasks of the desktop application in order to evaluate the Credit Karma interface. Participants A and B both stated that they Credit Karma to check full credit reports, dispute errors on credit reports, file tax returns, and look for new credit cards to apply for. The interviews were voice-recorded, video-recorded, and semi-structured.
         </p>
         <p>
             Based on the responses from these interviews, it appears that experienced users find Credit Karma’s user interface to be well-designed, intuitive, and useful. However a common complaint amongst these users was that with the credit card simulator was difficult to find. The users have indicated to me that the three main tasks for using Credit Karma are:
@@ -55,24 +48,7 @@
             </ol>
         </p>
         <p>
-            After completing the series of tasks, the interviewees were then asked the following questions:
-            <ol class="content-list">
-                <li>To begin, please tell me a little about yourself.</li>
-                <li>Have you ever used Credit Karma before?</li>
-                <li>Have you used any systems similar to Credit Karma?
-                    <ul>
-                        <li>If so, how frequently do you use this?</li>
-                        <li>When was the last time you used this?</li>
-                    </ul>
-                </li>
-                <li>What do you think of this app?</li>
-                <li>Would you add any features or improvements to this app?</li>
-                <li>What do you like or dislike about this app?</li>
-                <li>What was easy or difficult about task 1? Repeat for tasks 2 and 3.</li>
-            </ol>
-        </p>
-        <p>
-            Throughout the user task evaluations, every novice user interviewed has expressed that the user interface for Credit Karma is visually appealing. However most of them complained that the interface is too complicated and is overwhelming to those with little to no knowledge on financial matters due to its plethora of features. Another common complaint was that it was obvious that Credit Karma is trying to promote credit cards in order to gain money and the constant advertising was distracting.
+            After completing the series of tasks, the interviewees were then asked questions to evaluate their feelings towards using the app. Throughout the user task evaluations, every novice user interviewed has expressed that the user interface for Credit Karma is visually appealing. However most of them complained that the interface is too complicated and is overwhelming to those with little to no knowledge on financial matters due to its plethora of features. Another common complaint was that it was obvious that Credit Karma is trying to promote credit cards in order to gain money and the constant advertising was distracting.
         </p>
         <p>
             Users particularly had trouble with finding the credit card simulator; this task had the highest average number of errors and the highest average completion time due to the credit score simulator’s poor mapping, which forces the user to recall its position instead of being able to intuitively find it in the menu. This lack of intuitive design is a problem, considering that there are attentional limitations to memory retrieval. Thus, visibility of the credit score simulation could be improved.
