--- a/t4g.html
+++ b/t4g.html
@@ -27,43 +27,11 @@
         </p>
         <div align="center"><h2>Faculty Interviews</h2></div>
         <p>
-            To find what our stakeholders want from Collectively, the Tech4Good Qualitative Analysis team interviewed faculty members and students. We had semi-structured interviews and we typically asked questions such as:
-
-            <ol>
-                <li>Are you working with undergraduates in your lab? If so, how do you feel about them?</li>
-                <li>How do undergraduate research assistants compared to graduate research assistants?</li>
-                <li>What would you share or advise a new faculty who asks you about working with undergraduate student researchers?</li>
-                <li>What are your criteria for undergraduate students interested in your lab?</li>
-                <li>What kind of tasks do you typically assign undergraduate research assistants?</li>
-            </ol>
-        </p>
-        <div align="center"><h2>Faculty Responses</h2></div>
-        <p>
-            Based on the interviews we did with 8 professors, we have deducted that although many professors seek out undergraduate students to help in their labs, they generally do not see undergraduate students as preferable candidates for lab assistants. Because they are already busy with their classes, they tend to have little time to dedicate to research. Thus, professors tend to assign more menial tasks (such as inputting data into Excel spreadsheets) to them, and leave the actual research to graduate research assistants. This negative stance on undergraduate research assistants motivates us to design Collectively not only to unite people who want to learn but also draw in more motivated undergraduate students as potential better-quality lab assistants.
+            To find what our stakeholders want from Collectively, the Tech4Good Qualitative Analysis team interviewed faculty members and students. We had semi-structured interviews to analyze what would faculty want out of Collectively. Based on the interviews we did with 8 professors, we have deducted that although many professors seek out undergraduate students to help in their labs, they generally do not see undergraduate students as preferable candidates for lab assistants. Because they are already busy with their classes, they tend to have little time to dedicate to research. Thus, professors tend to assign more menial tasks (such as inputting data into Excel spreadsheets) to them, and leave the actual research to graduate research assistants. This negative stance on undergraduate research assistants motivates us to design Collectively not only to unite people who want to learn but also draw in more motivated undergraduate students as potential better-quality lab assistants.
         </p>
         <div align="center"><h2>Student Surveys</h2></div>
         <p>
-            For students, we sent out surveys with the following questions:
-
-            <ol>
-                <li>Demographics (gender, year in college, major, gender, how did you hear about us, etc.)</li>
-                <li>What motivated you to join or return to the reading groups this phase?</li>
-                <li>Is this your first time joining the Collectively reading groups?</li>
-                <li>How important were the following in motivating you to join Collectively?
-                    <ul>
-                        <li>Space to explore new ideas and stretch my imagination</li>
-                        <li>Exposure to topics outside my discipline</li>
-                        <li>Opportunity to meet and get to know like-minded peers</li>
-                        <li>Increase my chances of getting into a research lab</li>
-                        <li>Very low time commitment required</li>
-                    </ul>
-                </li>
-                <li>Do you have any concerns or questions that make you unsure whether to join?</li>
-            </ol>
-        </p>
-        <div align="center"><h2>Student Responses</h2></div>
-        <p>
-            We had a sample size of 48 students. The majors of students interested in Collectively included computer science, computer engineering, game design, electrical engineering, cognitive science, and technology and information management. Most of the students were undergraduates, but there were a few pursuing masters and PhDs. Regardless of whether they were pursuing an undergraduate or graduate degree, students stated that their primary reasons for joining Collectively was to learn more about various topics in computer science and/or gaining experience to join labs. All students claimed that it was extremely important for them that Collectively provided the following:
+            For students, we sent out surveys to determine students' motivations out of joining Collectively and using the website. We had a sample size of 48 students. The majors of students interested in Collectively included computer science, computer engineering, game design, electrical engineering, cognitive science, and technology and information management. Most of the students were undergraduates, but there were a few pursuing masters and PhDs. Regardless of whether they were pursuing an undergraduate or graduate degree, students stated that their primary reasons for joining Collectively was to learn more about various topics in computer science and/or gaining experience to join labs. All students claimed that it was extremely important for them that Collectively provided the following:
             <ul style="padding-left: 5%; width: 75%;">
                 <li>a space to explore new ideas</li>
                 <li>exposure to topics outside their discipline</li>
@@ -71,6 +39,9 @@
                 <li>a chance to join a research lab</li>
                 <li>a low time commitment</li>
             </ul>
+        </p>
+        <p>
+            Therefore, it was important that the website emphasized finding reading and skill-building groups and their logistics. We emphasized the group formation aspects of the platform. We also found out that students generally want to get to know their fellow group members and join Collectively in order to get their foot in the door for research labs. Thus, it was also a high priority for us to implement user profiles, including professors and students.
         </p>
         <div align="center"><h2>Wireframes</h2></div>
         <p>
