updated about page

--- a/t4g.html
+++ b/t4g.html
@@ -58,7 +58,7 @@
         <div class="center"><img src="Prototypes/Collectively/groups_ not logged in - one expanded header.jpg" width="75%"/></div>
         <br/>
     </body>
-    <div class="content-footer">
+    <div class="footer">
         © 2020 Elizabeth Dinh
     </div>
 </html>
