shortened project descriptions

--- a/t4g.html
+++ b/t4g.html
@@ -21,17 +21,17 @@
             I have been working as an undergraduate research assistant and UX designer at UCSC professor David Lee’s Tech4Good lab since September 2019. Tech4Good focuses on studying the intersection of computational systems and social interaction. Working in this lab has been a wonderful experience because it allows me to apply my knowledge of human-computer interaction into projects and gain new skills that I would not acquire from classes.
         </p>
         <div align="center"><h1>Collectively</h1></div>
-        <div align="center"><h2>Intro</h2></div>
+        <div align="center"><h2>Introduction</h2></div>
         <p>
-            While working at Tech4Good, I have been working on needfinding and designs for an educational platform, Collectively. Collectively aims to unite students into reading groups and skill-building groups for them to explore real world applications of computer science.
+            Collectively aims to unite students into reading groups and skill-building groups for them to explore real world applications of computer science and other subjects.
         </p>
-        <div align="center"><h2>Faculty Interviews</h2></div>
+        <div align="center"><h2>Target Audience</h2></div>
         <p>
-            To find what our stakeholders want from Collectively, the Tech4Good Qualitative Analysis team interviewed faculty members and students. We had semi-structured interviews to analyze what would faculty want out of Collectively. Based on the interviews we did with 8 professors, we have deducted that although many professors seek out undergraduate students to help in their labs, they generally do not see undergraduate students as preferable candidates for lab assistants. Because they are already busy with their classes, they tend to have little time to dedicate to research. Thus, professors tend to assign more menial tasks (such as inputting data into Excel spreadsheets) to them, and leave the actual research to graduate research assistants. This negative stance on undergraduate research assistants motivates us to design Collectively not only to unite people who want to learn but also draw in more motivated undergraduate students as potential better-quality lab assistants.
+            Collectively is targeted at both undergraduate and graduate students at UC Santa Cruz. It also involves UC Santa Cruz professors to help them promote their labs and information relating to their areas of research.
         </p>
-        <div align="center"><h2>Student Surveys</h2></div>
+        <div align="center"><h2>Design Goals</h2></div>
         <p>
-            For students, we sent out surveys to determine students' motivations out of joining Collectively and using the website. We had a sample size of 48 students. The majors of students interested in Collectively included computer science, computer engineering, game design, electrical engineering, cognitive science, and technology and information management. Most of the students were undergraduates, but there were a few pursuing masters and PhDs. Regardless of whether they were pursuing an undergraduate or graduate degree, students stated that their primary reasons for joining Collectively was to learn more about various topics in computer science and/or gaining experience to join labs. All students claimed that it was extremely important for them that Collectively provided the following:
+            Based on our survey responses from 48 students, it is important that Collectively provides:
             <ul style="padding-left: 5%; width: 75%;">
                 <li>a space to explore new ideas</li>
                 <li>exposure to topics outside their discipline</li>
@@ -40,8 +40,12 @@
                 <li>a low time commitment</li>
             </ul>
         </p>
+        <div align="center"><h2>Solutions</h2></div>
         <p>
-            Therefore, it was important that the website emphasized finding reading and skill-building groups and their logistics. We emphasized the group formation aspects of the platform. We also found out that students generally want to get to know their fellow group members and join Collectively in order to get their foot in the door for research labs. Thus, it was also a high priority for us to implement user profiles, including professors and students.
+            To attract highly motivated students as better quality research assistants, we designed Collectively so that students participate in reading groups or skill-building groups that interest them the most; doing this will help them find labs pertaining to their interests.
+        </p>
+        <p>
+            We also added featured professors to every reading group, so students are able to contact them for possible research opportunities.
         </p>
         <div align="center"><h2>Wireframes</h2></div>
         <p>
