--- a/worldbuilder.html
+++ b/worldbuilder.html
@@ -21,7 +21,10 @@
         <p>
             WorldBuilder is a procedural map generator for tabletop RPGs such as Dungeons and Dragons and Pathfinder. It allows game masters (GMs) to generate maps instead of manually creating them for their campaigns.
         </p>
-
+        <h2 align="center">Target Audience</h2>
+        <p>
+            WorldBuilder is aimed towards tabletop RPG players. Most tabletop RPG players are 25-39 years old and male.
+        </p>
         <h2 align="center">Research</h2>
         <p>
             Initially being a project for a software engineering class, there wasn't much time to conduct user research. Looking through designs that would appeal to our intended demographics of tabletop RPG players, the top results I found were that they looked for these certain qualities in design:
