--- a/creditkarma.html
+++ b/creditkarma.html
@@ -29,7 +29,7 @@
 
         <h2 align="center">Problem</h2>
         <p>
-            IIt has a fairly steep learning curve for beginners due to its complicated design. The objective of the application is to make managing money and various loans easier for people, yet it’s confusing for people who do not have much financial knowledge.
+            It has a fairly steep learning curve for beginners due to its complicated design. The objective of the application is to make managing money and various loans easier for people, yet it’s confusing for people who do not have much financial knowledge.
         </p>
 
         <h2 align="center">Examples</h2>
